Creating pages from mdx and blog template

--- a/posts/001-first-post/first-post.mdx
+++ b/posts/001-first-post/first-post.mdx
@@ -1,11 +1,9 @@
 ---
 title: First Post
 slug: first-post
-author: Brett Bloxom
+author: Jo
 date: 2020-03-07
 ---
-
-# First Post
 
 I'm baby pBR&B ethical direct trade, chartreuse skateboard intelligentsia pitchfork taiyaki pok pok bicycle rights
 austin. Next level whatever +1 you probably haven't heard of them typewriter. Vinyl literally lumbersexual hammock 3
