--- a/posts/002-second-post/second-post.mdx
+++ b/posts/002-second-post/second-post.mdx
@@ -1,11 +1,9 @@
 ---
 title: Second Post
 slug: second-post
-author: Brett Bloxom
+author: Jo
 date: 2020-03-08
 ---
-
-# Second Post
 
 I'm baby pBR&B ethical direct trade, chartreuse skateboard intelligentsia pitchfork taiyaki pok pok bicycle rights
 austin. Next level whatever +1 you probably haven't heard of them typewriter. Vinyl literally lumbersexual hammock 3
