--- a/content/blog/001-first-post/first-post.mdx
+++ b/content/blog/001-first-post/first-post.mdx
@@ -3,6 +3,7 @@ title: First Post
 slug: first-post
 author: Brett Bloxom
 date: 2020-03-07
+image: ./images/first.jpg
 ---
 
 I'm baby pBR&B ethical direct trade, chartreuse skateboard intelligentsia pitchfork taiyaki pok pok bicycle rights
