--- a/content/blog/002-second-post/second-post.mdx
+++ b/content/blog/002-second-post/second-post.mdx
@@ -3,6 +3,7 @@ title: Second Post
 slug: second-post
 author: Brett Bloxom
 date: 2020-03-08
+image: ./images/second.jpg
 ---
 
 I'm baby pBR&B ethical direct trade, chartreuse skateboard intelligentsia pitchfork taiyaki pok pok bicycle rights
