removed the s-components global styles - added netlify-cms

--- a/content/blog/first-post.mdx
+++ b/content/blog/first-post.mdx
@@ -1,9 +1,9 @@
 ---
-title: Second Post
-slug: second-post
-author: Jo
-date: 2020-03-08
-image: ./images/second.jpg
+title: First Post
+slug: first-post
+date: 2020-03-07
+author: Jonah
+image: ../images/first.jpg
 ---
 
 I'm baby pBR&B ethical direct trade, chartreuse skateboard intelligentsia pitchfork taiyaki pok pok bicycle rights
@@ -24,12 +24,12 @@ Offal beard williamsburg heirloom blog portland roof party. Taiyaki unicorn heal
 biodiesel, waistcoat vice ramps. Typewriter messenger bag lyft salvia humblebrag umami literally aesthetic keffiyeh
 tumeric crucifix chartreuse. Microdosing craft beer twee four loko poutine photo booth succulents.
 
-### Sub Heading
-
 Scenester quinoa williamsburg shaman pok pok helvetica tattooed. Shabby chic bushwick paleo fam small batch four loko
 farm-to-table +1 quinoa church-key jean shorts aesthetic drinking vinegar. Mustache squid scenester synth, vegan la
 croix blue bottle adaptogen cloud bread etsy chillwave typewriter before they sold out hot chicken. Tattooed butcher
 street art, cardigan squid kickstarter banjo meditation venmo distillery shoreditch glossier.
+
+### Sub Heading
 
 Green juice food truck roof party, kitsch poke forage shabby chic normcore pitchfork intelligentsia fanny pack venmo
 synth sustainable. Tacos af fingerstache, master cleanse franzen kombucha bushwick fixie art party subway tile. Paleo
